add SQL connection and dummy auth
